Bug 691088 - gs_type42_font_init GSUB table leak
Summary: gs_type42_font_init GSUB table leak
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: 0.00
Hardware: All All
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-22 09:56 UTC by Tor Andersson
Modified: 2010-09-24 10:47 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tor Andersson 2010-01-22 09:56:13 UTC
The "gs_type42_font_init(GSUB)" buffer is not freed. 

./xps/obj/gxps -ZA -l -dNOPAUSE -dQUIT -dBATCH \
	../tests_private/xps/xpsfts-a4/fts_01xx.xps >[2=1] \
	| awk -f leaks.awk

...
leak [a1:+b.]gs_type42_font_init(GSUB) -bytes-*(3662=3662*1) = 0x101043858
leak [a1:+b.]gs_type42_font_init(GSUB) -bytes-*(2474=2474*1) = 0x101087ad8
leak [a1:+b.]gs_type42_font_init(GSUB) -bytes-*(2474=2474*1) = 0x1010931d8
...

See bug #690754 for more xps leak info and the leaks.awk script.
Comment 1 Ken Sharp 2010-09-24 10:47:05 UTC
Fixed in revision 11741:

http://ghostscript.com/pipermail/gs-cvs/2010-September/011763.html